# bank-churn-analysis

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: local.dockerfile
models/: base_model.json  optimized_model.json
notebooks/: notebook.ipynb
