[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bank-churn-analysis"
version = "1.0.0"
description = "A Jupyter Notebook for exploring building an XGBoost model for determining bank churn"
authors = ["jsquared-2 <jsquared-2@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[build-system.poetry]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.24.0"
seaborn = "0.13.0"
matplotlib = "^3.8.4"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
